# dj-tutorial

./: .gitignore  justfile  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
project/mysite/: settings.py  urls.py
project/polls/: admin.py  models.py  tests.py  views.py
project/polls/migrations/: 0001_initial.py
project/polls/static/polls/: style.css
project/polls/templates/polls/: detail.html  index.html  results.html
project/templates/admin/: base_site.html
