[project]
name = "dj-tutorial"
version = "0.1.0"
description = "Project based on Django tutorial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django>=5.1.3"]

[dependency-groups]
dev = ["ipython>=8.29.0", "pre-commit>=4.0.1", "ruff>=0.7.3"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["DJ", "E", "F", "I", "N"]
