[project]
name = "dj-tutorial"
version = "0.1.0"
description = "Project based on Django tutorial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["django>=5.1.3"]

[dependency-groups]
dev = [
  "coverage>=7.6.4",
  "djlint>=1.36.1",
  "ipython>=8.29.0",
  "pre-commit>=4.0.1",
  "ruff>=0.7.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["DJ", "E", "F", "I", "N"]
ignore = ["F401"]

[tool.djlint]
profile = "django"
extend_exclude = "htmlcov"
ignore = "H030,H031"
blank_line_after_tag = "load,extends"
blank_line_before_tag = "block"
